# MPRPC

example/callee/: friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
lib/include/: rpcprovider.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: main.cc  test.proto
